crates/reinhardt-core/macros/tests/ui/admin/fail/unknown_attribute.stderr
error: unknown attribute `unknown_attr` for model admin

         = help: valid attributes are: for, name, list_display, list_filter, search_fields, fields, readonly_fields, ordering, list_per_page
 --> tests/ui/admin/fail/unknown_attribute.rs:7:43
  |
7 | #[admin(model, for = User, name = "User", unknown_attr = "value")]
  |                                           ^^^^^^^^^^^^
